<?xml version="1.0"?>
<package format="2">
  <name>mixmcl</name>
  <version>0.0.0</version>
  <description>
    mixmcl implements 2D robot localization algorithm called Mixture-MCL.
  </description>
  <author>jolly</author>
  <maintainer email="chungying.li@ntnu.edu.tw">jolly</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>
  <!--
  <build_depend>amcl</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <exec_depend>amcl</exec_depend>
  -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl_modified</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stamped_std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>amcl_modified</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>amcl_modified</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
